--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,14 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.6'
     testCompile 'junit:junit:4.12'
 }
 repositories {
