--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+
+        </activity>
         <activity android:name=".tictactoegame.TicTacActivity">
 
         </activity>
@@ -38,6 +39,11 @@
         <activity
             android:name=".pokemongame.PokemonGameActivity"
             android:label="@string/title_activity_pokemon_game">
+
+        </activity>
+        <activity
+            android:name=".pokemongame.PokemonGameTest"
+            android:label="@string/title_activity_pokemon_game_test">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
