Se agrego un ejemplo con recview y sql

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".tictactoegame.TicTacActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".tictactoegame.TicTacActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -44,11 +44,17 @@
 
         </activity>
         <activity android:name=".citysunrise.CitySunriseActivity">
+
+        </activity>
+        <activity android:name=".noteapp.ui.NoteActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".noteapp.ui.AddNoteActivity">
+
         </activity>
     </application>
 
