--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -40,22 +39,18 @@
             android:label="@string/title_activity_pokemon_game_test">
 
         </activity>
-        <activity android:name=".calculator.CalculatorActivity">
-
-        </activity>
-        <activity android:name=".citysunrise.CitySunriseActivity">
-
-        </activity>
+        <activity android:name=".calculator.CalculatorActivity"></activity>
+        <activity android:name=".citysunrise.CitySunriseActivity"></activity>
         <activity android:name=".noteapp.ui.NoteActivity">
+
+        </activity>
+        <activity android:name=".noteapp.ui.AddNoteActivity"></activity>
+        <activity android:name=".mediaplayer.MediaPlayerActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".noteapp.ui.AddNoteActivity">
-
-        </activity>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
     </application>
 
 </manifest>
