Se agregaron ejeplos de acelerometro y de sensor de luz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".simplegetage.GetMyAgeActivity" />
         <activity android:name=".tictactoegame.TicTacActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -37,30 +42,35 @@
 
         <activity
             android:name=".pokemongame.PokemonGameTest"
-            android:label="@string/title_activity_pokemon_game_test"></activity>
+            android:label="@string/title_activity_pokemon_game_test" />
         <activity android:name=".calculator.CalculatorActivity" />
         <activity android:name=".citysunrise.CitySunriseActivity" />
-        <activity android:name=".noteapp.ui.NoteActivity"></activity>
+        <activity android:name=".noteapp.ui.NoteActivity" />
         <activity android:name=".noteapp.ui.AddNoteActivity" />
-        <activity android:name=".mediaplayer.MediaPlayerActivity">
+        <activity android:name=".mediaplayer.MediaPlayerActivity" />
+        <activity android:name=".alarmmanager.AlarmActivity" />
+
+        <receiver android:name=".alarmmanager.util.MyBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.tester.alarmmanager" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".lightsensor.LightSensorActivity"></activity>
+        <activity android:name=".accelerometer.AccelerometerActivity">
 
         </activity>
-        <activity android:name=".alarmmanager.AlarmActivity">
+        <activity android:name=".SelectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".alarmmanager.util.MyBroadcastReceiver">
-                <intent-filter>
-                    <action android:name="com.tester.alarmmanager"/>
-                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                    <category android:name="android.intent.category.DEFAULT"/>
-                </intent-filter>
-
-        </receiver>
     </application>
 
 </manifest>
